// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProblemBrowser Main component render with basic parameters 1`] = `
<div
  className="problem-browser"
>
  <button
    className="btn"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Select a section or problem
  </button>
  <input
    disabled={true}
    name="problem-location"
    type="text"
    value={null}
  />
</div>
`;

exports[`ProblemBrowser Main component render with selected block 1`] = `
<div
  className="problem-browser"
>
  <button
    className="btn"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Select a section or problem
  </button>
  <input
    disabled={true}
    name="problem-location"
    type="text"
    value="some-selected-block"
  />
</div>
`;
